--- a/main.css
+++ b/main.css
@@ -20,9 +20,11 @@
 }
 .card_evil,.card_hero{
     width: 30px;
-  height: 40px;
+  height: 30px;
   float: left;
   margin-left: 30px;
+  text-align: center;
+  padding-top: 10px;
 }
 /* Имена */
 #evil_name,#hero_name{
