--- a/main.css
+++ b/main.css
@@ -68,6 +68,7 @@
   float: left;
   background-color: white;
   border-radius: 5px;
+  cursor: pointer;
 }
 #pass{
   height: 20px;
@@ -75,4 +76,5 @@
   margin-left: 100px;
   background-color: white;
   border-radius: 5px;
+  cursor: pointer;
 }
